# kundalini-yoga-cbt-telegram-bot

./: .env.template  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
bot/: config.py  db_service.py  handlers.py  main.py
bot/tests/: test_create_user.py  test_update_user.py
