[tool.poetry]
name = "kundalini-yoga-cbt-telegram-bot"
version = "0.1.0"
description = ""
authors = ["TamaraMalyheva <tamaramalysheva5991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
aiogram = "^3.3.0"
schedule = "^1.2.1"
pymongo = "^4.6.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
